src/sass/components/_top.scss
@use "sass:color";
@use "sass:math";
@use "../variables";
@use "../vendor/font-awesome/variables" as fa-variables;
@use "../mixins/shadows";
@use "../mixins/forms";
@use "../mixins/variants";
@use "../vendor/bootstrap/mixins/clearfix";

// Top menu

#top-menu {
  $top-menu-padding-vertical: variables.$padding-small-vertical + 1px;
  $top-menu-padding-horizontal: variables.$padding-side;

  @include clearfix.clearfix;

  box-sizing: border-box;
  padding: $top-menu-padding-vertical $top-menu-padding-horizontal;
  background: variables.$top-menu-bg;
  color: variables.$top-menu-text;
  font-size: variables.$font-size-small;

  @if variables.$top-menu-collapse {
    $toggler-position-v: -1px;
    $toggler-position-h: 1px;

    position: inherit;
    max-height: math.floor(variables.$font-size-base * variables.$font-size-small-unitless * variables.$line-height-base) + $top-menu-padding-vertical * 2;
    margin-top: -(math.floor(variables.$font-size-base * variables.$font-size-small-unitless * variables.$line-height-base) + $top-menu-padding-vertical * 2);
    padding-bottom: 0;
    overflow: hidden;
    will-change: margin;
    transition: margin .5s;

    &.expanded {
      max-height: none;
      margin-top: 0;
    }

    a {
      display: inline-block;
      margin-bottom: $top-menu-padding-vertical;
      white-space: nowrap;
    }

    .top-menu-toggler {
      @include variants.fa-icon-style;

      display: block;
      position: absolute;
      z-index: 2;
      top: $toggler-position-v;

      @if variables.$sidebar-position == "left" {
        left: $toggler-position-h;
      } @else {
        right: $toggler-position-h;
      }

      color: variables.$top-menu-link;
      font-size: variables.$font-size-base;
      line-height: 1;
      user-select: none;

      &::before {
        @include variants.fa-icon-variant(fa-variables.$fa-var-caret-square-down);

        margin-right: 0;
      }

      &:hover,
      &:focus,
      &:active {
        color: variables.$top-menu-link-hover;
      }

      &.expanded {
        &::before {
          @include variants.fa-icon-variant(fa-variables.$fa-var-caret-square-up);
        }
      }

      @media screen and (min-width: variables.$top-menu-collapse-breakpoint) {
        display: none;
      }
    }
  }

  ul {
    @include clearfix.clearfix;

    margin: 0;
    padding: 0;
  }

  li {
    margin: 0 .8em 0 0;
    padding: 0;
    float: left;
    list-style-type: none;
    white-space: nowrap;
  }

  a {
    color: variables.$top-menu-link;
    font-weight: variables.$font-weight-bold;

    &:hover {
      color: variables.$top-menu-link-hover;
      text-decoration: none;
    }

    &.login {
      @include variants.fa-icon-style;

      &::before {
        @include variants.fa-icon-variant(fa-variables.$fa-var-arrow-right-to-bracket);

        margin-right: 4px;
      }
    }

    &.register {
      @include variants.fa-icon-style;

      &::before {
        @include variants.fa-icon-variant(fa-variables.$fa-var-user-plus);

        margin-right: 4px;
      }
    }

    &.my-account {
      @include variants.fa-icon-style("Regular");

      &::before {
        @include variants.fa-icon-variant(fa-variables.$fa-var-circle-user);

        margin-right: 4px;
      }
    }

    &.logout {
      @include variants.fa-icon-style;

      &::before {
        @include variants.fa-icon-variant(fa-variables.$fa-var-arrow-right-from-bracket);

        margin-right: 4px;
      }
    }
  }

  #loggedas {
    margin-left: 1em;
    float: right;
  }
}

#account {
  float: right;

  > ul > li {
    margin-right: 0;
    margin-left: .8em;
  }
}


// Header

#header {
  @include clearfix.clearfix;

  position: relative;
  background-color: variables.$header-bg;
  color: variables.$header-text;

  > h1 {
    padding: variables.$header-padding-vertical variables.$header-padding-horizontal;

    @if variables.$use-logo {
      padding-left: variables.$logo-image-width + variables.$logo-position-horizontal + variables.$logo-space;
      background-image: url("../images/logo/logo.png");
      background-repeat: no-repeat;
      background-position: variables.$logo-position-horizontal variables.$logo-position-vertical;
    }

    .root {
      color: variables.$header-root;
      font-weight: variables.$font-weight-semi-bold;
    }

    .ancestor {
      font-weight: variables.$font-weight-semi-bold;
    }

    .root,
    .ancestor {
      display: inline-block;
    }

    .current-project {
      display: inline-block;
    }
  }

  a {
    color: variables.$header-link;
  }
}

#quick-search {
  #header & {
    margin-top: math.floor((variables.$header-title-line-height + variables.$header-padding-vertical * 2 - variables.$input-height-base) * .5) - 1px;
    margin-right: variables.$header-padding-horizontal;
    float: right;
    color: variables.$header-text;
  }

  > * {
    vertical-align: top;
  }

  form {
    display: inline-block;

    input {
      width: variables.$quick-search-width;
    }
  }

  > form > input,
  > select {
    border-color: variables.$quick-search-border;

    &:focus {
      border-color: variables.$quick-search-border-focus;
    }
  }

  option {
    background-color: variables.$input-bg;
    color: variables.$input-color;

    &[disabled] {
      color: variables.$gray-400;
    }
  }
}

#project-jump {
  display: inline-block;

  &.expanded {
    .drdn-trigger {
      @include variants.fa-icon-style(null, "after");

      z-index: 1003;
      height: auto;
      padding-bottom: variables.$header-padding-horizontal * .5;
      border-color: variables.$quick-search-dropdown-bg;
      background-color: variables.$quick-search-dropdown-bg;

      &::after {
        @include variants.fa-icon-variant(fa-variables.$fa-var-caret-up);
      }
    }
  }

  .drdn {
    &-trigger {
      @include variants.fa-icon-style(null, "after");
      @include forms.form-field;

      min-width: variables.$quick-search-width;
      border-color: variables.$quick-search-border;

      &:focus {
        border-color: variables.$quick-search-border-focus;
      }

      &::after {
        @include variants.fa-icon-variant(fa-variables.$fa-var-caret-down);

        position: absolute;
        top: (variables.$font-size-base * .5);
        right: variables.$input-padding-horizontal;
      }
    }

    &-content {
      min-width: variables.$quick-search-box-width;
      background: variables.$quick-search-dropdown-bg;

      > .quick-search {
        padding: variables.$header-padding-horizontal * .5;

        > input {
          width: 100%;
        }
      }
    }

    &-items {
      border-top: 1px solid variables.$quick-search-dropdown-border;

      > a,
      > span {
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
    }
  }

  a {
    color: variables.$main-menu-link;

    &:hover,
    &:focus {
      background-color: variables.$component-active-bg;
      color: variables.$component-active-color;
      text-decoration: none;
    }
  }

  .all-projects a {
    font-weight: variables.$font-weight-bold;
  }
}

#main-menu {
  $tabs-height: variables.$main-menu-padding-vertical * 2 + variables.$line-height-computed;

  clear: both;
  background-color: variables.$main-menu-bg;
  box-shadow: inset 0 -1px variables.$main-menu-border;
  color: variables.$text-color;

  &.tabs {
    margin-bottom: 0;
    overflow: inherit;

    > ul {
      height: $tabs-height;

      > li {
        > a {
          height: $tabs-height;
          margin: 0;
          border: 0 none;
          border-radius: 0;
          background: transparent;
        }
      }
    }
  }

  > ul {
    @include clearfix.clearfix;

    margin: 0;
    padding: 0 (variables.$padding-side - variables.$main-menu-padding-horizontal);
    color: variables.$main-menu-link;
    list-style: none;

    > li {
      position: relative;
      float: left;

      &:hover {
        > .new-object {
          z-index: 100;
          border-bottom: 1px solid variables.$main-menu-dropdown-bg;
        }

        > .menu-children {
          visibility: visible;
        }
      }

      > a {
        display: block;
        padding: variables.$main-menu-padding-vertical variables.$main-menu-padding-horizontal;
        transition: box-shadow variables.$transition-time-long;
        color: variables.$main-menu-link;
        line-height: variables.$line-height-computed;
        white-space: nowrap;

        @media screen and (min-width: variables.$screen-lg-min) {
          padding-right: variables.$main-menu-padding-horizontal * 2;
          padding-left: variables.$main-menu-padding-horizontal * 2;
        }

        &:hover,
        &:focus {
          background-color: variables.$main-menu-bg-hover;
          box-shadow: inset 0 (-(variables.$main-menu-shadow-width)) 0 variables.$main-menu-shadow-hover;
          text-decoration: none;
        }

        &.selected {
          padding-bottom: variables.$main-menu-padding-vertical - variables.$main-menu-shadow-width;
          border-bottom: 3px solid variables.$main-menu-shadow-active;
          background-color: variables.$main-menu-bg-active;
          box-shadow: none;
          color: variables.$main-menu-link-active;
          font-weight: variables.$font-weight-semi-bold;
        }

        &.new-object {
          position: relative;
          width: $tabs-height;
          margin-right: variables.$main-menu-padding-horizontal;
          padding-bottom: variables.$main-menu-padding-vertical - 1px;
          border: 1px solid variables.$main-menu-border;
          border-width: 0 1px;
          background-color: variables.$main-menu-dropdown-bg;
          font-family: fa-variables.$fa-style-family;
          font-size: .85em;
          font-weight: variables.$font-weight-bold;

          &:hover,
          &:focus {
            box-shadow: none;
          }
        }
      }
    }
  }

  a {
    color: variables.$main-menu-link;
  }

  .menu-children {
    @include shadows.nice-shadow(2);

    display: block;
    visibility: hidden;
    position: absolute;
    z-index: 1001;
    min-width: 130px;
    margin: 0 1px;
    padding: 0;
    overflow: hidden;
    transition: visibility 0ms 50ms;
    border-radius: 0 0 variables.$border-radius-base variables.$border-radius-base;
    background: variables.$main-menu-dropdown-bg;
    list-style: none;

    &.visible {
      visibility: visible;
    }

    a {
      display: block;
      padding: variables.$tab-padding-vertical (variables.$tab-padding-horizontal * 2);
      border-top: 1px solid variables.$main-menu-border;
      color: variables.$main-menu-link;

      &:hover,
      &:focus {
        background-color: variables.$component-active-bg;
        color: variables.$component-active-color;
        text-decoration: none;
      }
    }

    > li:first-child > a {
      border: 0 none;
    }
  }

  .tabs-buttons {
    padding-left: 0;
    border-color: variables.$main-menu-border;
    background-color: variables.$main-menu-bg;

    > button {
      box-sizing: border-box;
      height: $tabs-height - 1px;
      background-color: variables.$main-menu-bg;

      &:hover {
        background-color: variables.$main-menu-bg-hover;
      }
    }
  }
}

